<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/flowers3"
    android:scaleType="fitXY"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        tools:context=".RelativeActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:lines="3"
            android:text="@string/match"></TextView>


        <TextView
            android:id="@+id/textView3"
            android:layout_width="161dp"
            android:layout_height="69dp"
            android:layout_alignParentLeft="true"
            android:layout_toRightOf="@id/imageView3"
            android:text="@string/play"></TextView>


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/go"
            android:onClick="onGo"
            app:srcCompat="@drawable/go" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/reset"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:onClick="onReset"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            app:srcCompat="@drawable/reset1" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/money"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            app:srcCompat="@drawable/dol" />


        <TextView
            android:id="@+id/textView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignBottom="@id/imageView3"
            android:layout_toRightOf="@id/imageView3"
            android:text="@string/amount"
             />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/imageView"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/flower1"
                app:srcCompat="@drawable/f1" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/flower2"
                app:srcCompat="@drawable/f2" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/flower3"
                app:srcCompat="@drawable/f3" />
        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>